# telegram-avito-bot

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
src/: config.py  database.py
src/avito/: parser.py
src/database/: database.py  database.sql
src/gateway/: app.py
src/schemas/: schemas.py
src/telegram/: bot.py
